--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,3 +80,33 @@ a.button {
 a.buttona:hover {
     background: #2A2F43;
 }
+.big-title {
+    font-weight: 600;
+    font-size: 49px;
+    color: #1A1D2B;
+    line-height: 98%;
+}
+.subtitle {
+    margin-top: 24px;
+    font-size: 17px;
+    line-height: 140%;
+    display: flex;
+    align-items: center;
+    color: #1A1D2B;
+    opacity: 0.75;
+}
+.small-title {
+    color: #1A1D2B;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 98%;
+}
+.content {
+    width: 100%;
+    margin-top: 72px;
+    background-color: #fff;
+    height: auto;
+    display: flex;
+    justify-content: center;
+}
